Enhance DriverController, DriverDiscoveryApplication, DriverStoreService, EvictionScheduler, and RedisConfig: add detailed Javadoc comments for improved code documentation